# python-linz-geodetic

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.txt  DESCRIPTION.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.py
LINZ/: __init__.py
LINZ/Geodetic/: Ellipsoid.py  ITRF.py  Sinex.py  ellipsoid.py  gdb.py
debian/: changelog  clean  control  copyright  rules
tests/: fileunittest.py  test.snx  testEllipsoid.py  testEllipsoid.results  testITRF.py  testSinex.py  testSinex.results  test_Ellipsoid.py  test_ITRF.py  test_ITRF.results  test_Sinex.py  test_Sinex.results  test_Sinex.results.new
